src/objects/FSTR__PCE_Team_Member__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>List of users that are assigned to a client and what their role is in relation to that client</description>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>PCE_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the user record for the client team member.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Advisor</fullName>
                </value>
                <value>
                    <fullName>Associate Advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>PTM-{000000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>